# Stack-Attack

./: .dockerignore  .gitignore  README.md  docker-compose.override.yml  docker-compose.yml  vercel.json
backend/: .env.sample  Dockerfile.dev  Procfile  README.md  dockerfile.dev  pyproject.toml  requirements.txt
backend/src/: app.py
backend/src/prompts/: ingestion.txt  qa.txt
backend/src/routes/: security.py
backend/src/routes/chat_categories/: routes.py
backend/src/routes/chats/: models.py  route.py
backend/src/routes/messages/: models.py  route.py
backend/src/routes/open_ai/: route.py
backend/src/routes/postgres/: route.py
backend/src/routes/usage/: route.py
backend/src/utils/: env_helper.py  helper.py
backend/src/utils/open_ai/: open_ai_client_manager.py
backend/src/utils/pdf_parsing/: page.py
backend/src/utils/postgres/: connection_handler.py  models.py  queries.py
client/: Dockerfile.dev  package-lock.json  vite.config.ts
frontend/: .env.sample  dockerfile.dev  package-lock.json  package.json  tsconfig.app.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/api/: api.ts  authentication.ts  conversations.ts  fetchers.ts  response.ts
frontend/src/components/: account-setings.tsx  account-sidebar.tsx  auth-callback.tsx  auth-gate.tsx  auth-guard.tsx  chat-history.tsx  chat-input.tsx  chat-inputs.tsx  chat-message.tsx  chat.tsx  custom-sidebar-button.tsx  dictation-button.tsx  file-button.tsx  layout.tsx  quick-chat-input.tsx  recent-conversation-dropdown.tsx  recent-conversation-sidebar.tsx  recent-conversation-tooltips.tsx  sidebar.tsx  text-input.tsx
frontend/src/contexts/: auth-context.tsx
frontend/src/hooks/: use-conversation.tsx
frontend/src/types/: conversation.ts
frontend/src/util/: time.ts
wordpress/: .gitignore  README.md  docker-compose.yml  wp-config.php
(+1 files in other folders)
