[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Liam Tapper",email = "97718694+tliam1@users.noreply.github.com"}
]
readme = "README.md"
packages = [{ include = "src" }]
[tool.poetry.dependencies]
python = ">=3.12"
fastapi = ">=0.119.1,<0.120.0"
openai = ">=2.6.0,<3.0.0"
black = ">=25.9.0,<26.0.0"
uvicorn = {extras = ["standard"], version = ">=0.38.0,<0.39.0"}
[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

